--- a/task-9-js-july-20-2023/style.css
+++ b/task-9-js-july-20-2023/style.css
@@ -7,17 +7,23 @@
 body{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgb(22, 180, 87),rgb(33, 192, 220),rgb(20, 126, 212));
+    background: linear-gradient(rgb(3, 94, 242),rgb(3, 223, 248));
+    
 }
 
 h1{
     font-size: 40px;
     color: #fff;
 }
+.container{
+    display: flex;
+    height: 100%;
+}
 .list {
     max-width: 400px;
-    margin: 120px auto;
-    background: linear-gradient(rgb(20, 81, 212),rgb(225, 174, 8));
+    margin: auto;
+    background: linear-gradient(rgb(3, 223, 248),rgb(3, 95, 242));
+
     border-radius: 15px;
     padding: 20px;
 }
@@ -83,6 +89,19 @@ h1{
     max-height: 250px;
     overflow: auto;
 }
+
+    
+.todo::-webkit-scrollbar {
+    width: 8px;
+}
+
+.todo::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 153, 0); 
+    border-radius: 50px;
+    
+}
+
+
 .todo li {
     list-style: none;
     height: 45px;
